feat(auth): implement email auth api
